# Client_Server_DBApp

./: CMakeLists.txt  DS-MandatoryExercise2_Dependency-Graph.drawio  README.md  run_tests.sh
app/: CMakeLists.txt  client.c  server.c
include/DS-MandatoryExercise/: keys.h  netUtils.h  utils.h
include/DS-MandatoryExercise/dbms/: dbms.h  dbmsUtils.h
src/: CMakeLists.txt  keys.c  netUtils.c  utils.c
src/dbms/: CMakeLists.txt  dbms.c  dbmsUtils.c
test/: CMakeLists.txt  keys_tests.cpp
